--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sortablejs": "^1.15.0",
     "vite": "^5.2.9",
     "vue": "^3.4.21",
+    "vue-router": "^4.2.0",
     "vue-tsc": "1.8.27"
   },
   "devDependencies": {
