--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,16 @@
-# Unit Test Coverage Report
-
-name: ✅ Test Coverage
+name: 🧪 Unit Test
 
 on:
-  pull_request:
-    branches:
-      - dev
-  workflow_dispatch:
+  push:
+    branches: [main, dev]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
+  cancel-in-progress: true
 
 jobs:
   lint:
-    name: Coverage
+    name: Lint
     runs-on: ubuntu-latest
 
     steps:
@@ -42,8 +42,10 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm i --frozen-lockfile
+        run: pnpm i  --no-frozen-lockfile
+
+      - name: Test
+        run: pnpm test
 
       - name: Coverage
         run: pnpm run coverage
- 
