chore(package.json): :hammer: update esbuild version

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@plus-pro-components/utils": "workspace:*",
     "dayjs": "^1.11.7",
     "element-plus": "^2.6.3",
+    "esbuild": "0.24.0",
     "lodash-es": "^4.17.21",
     "sortablejs": "^1.15.0",
     "vite": "^5.2.9",
